# fin_sync

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-0d28f9d7a934a795469db6ea8bb4eaa36b9865ebfd242690cc17d358d659987f.json  query-1b5ef680d338f37aa6e6b7d774ca78bac43d72024b9aecda9de4e9836e98d86d.json  query-1c353aac505ee45e0ff8d96231bbffdfd052067b0c365266adc5e64ad83283fc.json  query-1df972974e87af5de652a4687d00eb22e5a945cb43cff34c9e1dd59ebffdab4d.json  query-207930fa9ededdcd971b73ab907a8bc4363c6fe37e10050451842566b8e44b2f.json  query-24e0fee1ec05e9b00c671283ea21bd403347fd873fe870e3f6e98eaa01eabd03.json  query-2cd047e0c2f7ca7cb1de88edad055aedcb4568b6867560b71c623854c974f314.json  query-35e646e7cd96029371483aaeb3d808cbf554b68535384c5f5edfc5743586ca3e.json  query-3a6afee0d0341558e04c5940759a1245e6a9b580df238a24320f1404fc7fd2ef.json  query-4554a9b04ca5377a8e5875d7314effe7a8fddae5de6256248df5b68e92844c6a.json  query-481fbeda2eaaa9ac45c7695623e4f03d607877f56e828ead63cf38e7f072b6bc.json  query-49e9876db8c319ceb3cb0deca1d31d7efb427cd5211b24e89265903789ec7873.json  query-603a51d96dba2fe10481f79d27af12c58fe22a9737797e8c84191e498283f9d2.json  query-991c2925e24d09b83db4d0dbf11432a97921de7957c55fa8f795f40e75410df0.json  query-9e9ad09abd29767726fd2ecafc22e0f620cdb5d39be04f5d6bb968ac3b675380.json  query-b355e2c289e97d0fd6ef306bda7340f58454209fb830e158d40c89b8d198f77c.json  query-c1418f26d72dc675c0d7087b0083c25c763fec965b3124317f3c503d1bce5e25.json  query-c5b84117059039e49f343a894ed3bb7bfe3cdfe512d524df3bbf2c5ea3ba3865.json  (+3 more)
src/: adapters.rs  domain.rs  (+4 more)
(+52 files in other folders)
