[package]
name = "frg"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0"
tower = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
