[package]
name = "fin_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0"
tower = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-stripe = { version = "0.41", features = [
  "webhook-events",
  "runtime-tokio-hyper",
] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "test-util"] }
proptest = "1"
